--- a/service-wordpress_rds.yaml
+++ b/service-wordpress_rds.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordpress
+  name: wordpress-rds
   namespace: argocd
   labels:
     app: wordpress-rds
