--- a/secret-mysql_rds.yaml
+++ b/secret-mysql_rds.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
 type: Opaque
 data:
-  host: 'devopsinterview.cw7qgk28g9tl.us-east-1.rds.amazonaws.com'
+  host: 'base64.URLEncoding.DecodeString(devopsinterview.cw7qgk28g9tl.us-east-1.rds.amazonaws.com)'
   dbname: 'devopsinterview'
   username: 'devopsinterview'
   password: 'd3v0ps-1nt3rv13w'
